--- a/Resto.Plugin.Hotel/Properties/Resources.resx
+++ b/Resto.Plugin.Hotel/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="fast_forward32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fast-forward32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="forward32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\forward32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="info_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
